--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
   "name": "geega/php-micro",
   "description": "Simple micro php framework",
-  "version": "0.1.1,
+  "version": "0.1.2",
   "autoload": {
     "psr-4": {
       "Geega\\Micro\\": "src/"
