--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
   "name": "geega/php-micro",
   "description": "Simple micro php framework",
-  "version": "0.1.2",
+  "version": "0.2.0",
   "autoload": {
     "psr-4": {
       "Geega\\Micro\\": "src/"
@@ -14,5 +14,7 @@
     }
   ],
   "minimum-stability": "dev",
-  "require": {}
+  "require": {
+    "rakit/validation": "1.0.0"
+  }
 }
