--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
   "name": "geega/php-micro",
   "description": "Simple micro php framework",
-  "version": "0.2.0",
+  "version": "0.3.0",
   "autoload": {
     "psr-4": {
       "Geega\\Micro\\": "src/"
@@ -15,6 +15,7 @@
   ],
   "minimum-stability": "dev",
   "require": {
-    "rakit/validation": "1.0.0"
+    "rakit/validation": "1.0.0",
+    "spatie/data-transfer-object":"1.14.1"
   }
 }
