--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -18,7 +18,7 @@ jobs:
     - uses: actions/checkout@v3
 
     - name: Validate composer.json and composer.lock
-      run: composer validate --strict
+      run: composer validate #--strict
 
     - name: Cache Composer packages
       id: composer-cache
@@ -32,5 +32,5 @@ jobs:
     - name: Install dependencies
       run: composer install --prefer-dist --no-progress
       
-    - name: Run test suite
-      run: composer run-script test
+#    - name: Run test suite
+#      run: composer run-script test
