--- a/composer.json
+++ b/composer.json
@@ -1,21 +1,30 @@
 {
-  "name": "geega/php-micro",
-  "description": "Simple micro php framework",
-  "version": "0.4.0",
-  "autoload": {
-    "psr-4": {
-      "Geega\\Micro\\": "src/"
+    "name": "geega/php-micro",
+    "description": "Simple micro php framework",
+    "version": "0.4.0",
+    "minimum-stability": "dev",
+    "authors": [
+        {
+            "name": "geega",
+            "email": "varpihovsky@gmail.com"
+        }
+    ],
+    "autoload": {
+        "psr-4": {
+            "Geega\\Micro\\": "src/"
+        }
+    },
+    "autoload-dev": {
+        "prs-4": {
+            "Geega\\Micro\\Tests": "tests/"
+        }
+    },
+    "require": {
+        "rakit/validation": "1.0.0",
+        "spatie/data-transfer-object": "1.14.1"
+    },
+    "require-dev": {
+        "squizlabs/php_codesniffer": "3.7.1",
+        "phpunit/phpunit": "9.5.27"
     }
-  },
-  "authors": [
-    {
-      "name": "geega",
-      "email": "varpihovsky@gmail.com"
-    }
-  ],
-  "minimum-stability": "dev",
-  "require": {
-    "rakit/validation": "1.0.0",
-    "spatie/data-transfer-object":"1.14.1"
-  }
 }
