--- a/composer.json
+++ b/composer.json
@@ -26,5 +26,8 @@
     "require-dev": {
         "squizlabs/php_codesniffer": "3.7.1",
         "phpunit/phpunit": "9.5.27"
+    },
+    "scripts": {
+        "test": "vendor/bin/phpunit tests"
     }
 }
